--- a/css/impress.css
+++ b/css/impress.css
@@ -44,7 +44,7 @@
 }
 
 @font-face {
-	font-family: "Open Sans Regular";
+	font-family: "Open Sans";
 	src: url(../assets/fonts/open-sans/OpenSans-Regular.ttf);
 }
 
@@ -137,7 +137,7 @@ a:focus
     -o-box-sizing:      border-box;
     box-sizing:         border-box;
 
-    font-family: 'PT Serif', georgia, serif;
+    font-family: 'Open Sans', sans-serif, serif, georgia;
     font-size: 48px;
     line-height: 1.5;
 }
