--- a/css/impress.css
+++ b/css/impress.css
@@ -80,7 +80,7 @@ i, em { font-style: italic }
 
 a
 {
-    color: inherit;
+    color: #00CCCC;
     text-decoration: none;
     padding: 0 0.1em;
     background: rgba(255,255,255,0.5);
